fixing overflow

--- a/src/components/side-nav-bar/side-bar-item/side-bar-item.scss
+++ b/src/components/side-nav-bar/side-bar-item/side-bar-item.scss
@@ -27,7 +27,6 @@
     }
 
     .side-bar-text {
-        overflow: hidden;
         font-size: 14px;
         letter-spacing: 0px;
         line-height: 1.2;
